--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -11,3 +11,29 @@ nav {
     }
   }
 }
+
+@media only screen and (min-width: 768px) {
+  body {
+    font-size: 16px; // Slightly larger text for tablets
+  }
+
+  .card {
+    img {max-width: 50%;
+    height: auto}
+    flex-direction: row; // Cards display side by side
+    .card-content {
+      padding: 20px;
+    }
+  }
+
+  nav ul {
+    flex-direction: row; // Horizontal navigation
+    li {
+      display: inline-block;
+    }
+  }
+
+  header {
+    padding: 1rem;
+  }
+}
