--- a/css/styles.css
+++ b/css/styles.css
@@ -386,7 +386,7 @@ nav a:hover {
 }
 
 section {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -396,6 +396,33 @@ section p, section li {
   font-size: 1rem;
   line-height: 1.6;
   padding: 0 20px;
+}
+
+.card {
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  margin: 15px;
+}
+.card img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card-content {
+  padding: 20px;
+}
+.card-content h2 {
+  margin-top: 0;
+  font-size: 1.25rem;
+}
+.card-content p {
+  font-size: 0.9rem;
 }
 
 .social-media-icons {
@@ -455,6 +482,30 @@ footer p {
     display: block;
   }
 }
+@media only screen and (min-width: 35rem) and (min-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+  .card {
+    flex-direction: row;
+  }
+  .card img {
+    max-width: 50%;
+    height: auto;
+  }
+  .card .card-content {
+    padding: 20px;
+  }
+  nav ul {
+    flex-direction: row;
+  }
+  nav ul li {
+    display: inline-block;
+  }
+  header {
+    padding: 1rem;
+  }
+}
 @media only screen and (min-width: 60rem) {
   body {
     display: grid;
@@ -473,5 +524,14 @@ footer p {
   }
   nav ul li {
     flex: none;
+  }
+  .card {
+    flex-direction: row;
+  }
+  .card img {
+    flex-basis: 20%;
+  }
+  .card .card-content {
+    flex-basis: 80%;
   }
 }
