--- a/css/styles.css
+++ b/css/styles.css
@@ -424,6 +424,14 @@ section p, section li {
 .card-content p {
   font-size: 0.9rem;
 }
+.card-content h3 a {
+  text-decoration: none;
+  color: #333;
+  cursor: pointer;
+}
+.card-content h3 a:hover {
+  color: #db0000;
+}
 
 .social-media-icons {
   display: flex;
